--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
         margin: 50px;
         /* color: #ff0000;
         color: red;
-        color: rgb(255, 0, 0); */
-        /* color: red;
+        color: rgb(255, 0, 0);
+        color: red;
         background-color: aqua;
         text-align: center;
         text-decoration: underline;
@@ -119,4 +119,5 @@
 
        <img src="/image.jpg" width="50px" height="300px"> -->
 </body>
+
 </html>
